<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.malopus."
    android:scrollbars="vertical"
    android:id="@+id/scroll">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start" />
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TX"/>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/shopButton"
        android:layout_height="wrap_content"
        android:text="@string/goTo"
        android:textColor="@color/colorAccent"
        app:cornerRadius="5dp"
        app:rippleColor="@color/colorAccent"
        android:textSize="12sp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        android:color="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/shopButton2"
        android:layout_height="wrap_content"
        android:text="@string/episode2"
        android:textColor="@color/colorAccent"
        app:cornerRadius="5dp"
        app:rippleColor="@color/colorAccent"
        android:textSize="12sp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        android:color="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/shopButton3"
        android:layout_height="wrap_content"
        android:text="@string/episode3"
        android:textColor="@color/colorAccent"
        app:cornerRadius="5dp"
        app:rippleColor="@color/colorAccent"
        android:textSize="12sp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        android:color="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/shopButton4"
        android:layout_height="wrap_content"
        android:text="@string/episode4"
        android:textColor="@color/colorAccent"
        app:cornerRadius="5dp"
        app:rippleColor="@color/colorAccent"
        android:textSize="12sp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        android:color="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/shopButton5"
        android:layout_height="wrap_content"
        android:text="@string/episode5"
        android:textColor="@color/colorAccent"
        app:cornerRadius="5dp"
        app:rippleColor="@color/colorAccent"
        android:textSize="12sp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        android:color="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/shopButton6"
        android:layout_height="wrap_content"
        android:text="@string/episode6"
        android:textColor="@color/colorAccent"
        app:cornerRadius="5dp"
        app:rippleColor="@color/colorAccent"
        android:textSize="12sp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        android:color="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>

</ScrollView>